--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <input type="hidden" name="orgid" value="00D5f000005Xq2H" />
-                    <input type="hidden" name="retURL" value="https://www.google.com/" />
+                    <input type="hidden" name="retURL" value="https://moisest7.github.io/webtocase.github.io/thankYou.html" />
 
                     <!--  ----------------------------------------------------------------------  -->
                     <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
